# merlin2_carry_my_luggage

./: README.md
merlin2_carry_my_luggage/: CMakeLists.txt  package.xml
merlin2_carry_my_luggage/include/merlin2_carry_my_luggage/: pointing_node.hpp
merlin2_carry_my_luggage/merlin2_carry_my_luggage/: merlin2_detect_bag_action.py  merlin2_follow_person_action.py  merlin2_mission_node.py  merlin2_offer_bag_action.py  merlin2_pick_bag_action.py  pddl.py  pointing_node.py  system_profiler.py
merlin2_carry_my_luggage/merlin2_carry_my_luggage/states/: __init__.py  displace_pose_state.py
merlin2_carry_my_luggage/src/: pointing_node.cpp
merlin2_carry_my_luggage_bringup/: CMakeLists.txt  package.xml
merlin2_carry_my_luggage_bringup/launch/: carry_my_luggage.launch.py
merlin2_carry_my_luggage_bringup/params/: carry.gram  grammar.gram  waypoints.yaml
merlin2_carry_my_luggage_msgs/: CMakeLists.txt  package.xml
merlin2_carry_my_luggage_msgs/msg/: Pointing.msg  PointingArray.msg
