<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merlin2_carry_my_luggage</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mgons@unileon.es">miguel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>yolov8_msgs</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>merlin2_mission</depend>
  <depend>merlin2_fsm_action</depend>
  <depend>merlin2_carry_my_luggage_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
